--- a/shopee_BE/src/main/resources/application.yaml
+++ b/shopee_BE/src/main/resources/application.yaml
@@ -1,10 +1,13 @@
 spring:
   datasource:
-
-    url: "jdbc:mysql://192.168.10.50:3309/shopee"
+    url: "jdbc:mysql://mysql_shopee:3306/shopee"
     username: springstudent
     password: springstudent
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
