--- a/shopee_BE/src/main/resources/application.yaml
+++ b/shopee_BE/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: "jdbc:mysql://mysql_shopee:3306/shopee"
+    url: "jdbc:mysql://localhost:3309/shopee"
     username: springstudent
     password: springstudent
     driver-class-name: com.mysql.cj.jdbc.Driver
